[tool.poetry]
name = "quackstack"
version = "1.1.0"
description = "An on-demand procedural ducky delivery service."
authors = ["vcokltfre <vcokltfre@gmail.com>", "ChrisLovering <chris.lovering.95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"

fastapi = "0.104.1"
Pillow = "10.1.0"
aiofiles = "23.2.1"
uvicorn = "0.24.0.post1"
frozendict = "2.3.10"

[tool.poetry.dev-dependencies]
pre-commit = "3.5.0"
ruff = "0.1.7"
taskipy = "1.12.2"

[tool.taskipy.tasks]
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
start-dev = "uvicorn api.main:app --reload"

[tool.ruff]
target-version = "py310"
extend-exclude = [".cache"]
select = ["ALL"]
ignore = [
    "ANN002", "ANN003", "ANN101",
    "C901",
    "CPY001",
    "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D416",
    "EM",
    "PLR0912",
    "TRY003",
]
line-length = 120
unsafe-fixes = true
preview = true

[tool.ruff.isort]
order-by-type = false
case-sensitive = true
combine-as-imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
